<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">AEB - Sample 01</string>
  <string name="action_settings">Settings</string>

  <string name="labelLogin">Login:</string>
  <string name="hintLogin">Username or email</string>
  <string name="labelPassword">Password:</string>
  <string name="labelPasswordOk">Password [OK]:</string>
  <string name="labelPasswordFail">Password [FAIL]:</string>
  <string name="labelConfirmPassword">Confirm Password:</string>
  <string name="labelGroup">Select Group:</string>
  <string name="labelRememberLogin">Remember Login</string>
  <string name="labelRememberPassword">Remember Password</string>
  <string name="labelChooseGroup">Select Group</string>
  <string name="labelLastOpened">Continue where you left off</string>

  <string name="btnProceed">Proceed</string>


  <string name="msgPasswordFail">Passwords mismatch each other</string>
  <string name="msgPasswordPatternFail">Password does not match pattern</string>
  <string name="msgPasswordOK">Validation Passed!</string>
</resources>
