<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      tools:context="com.artfulbits.sample.LoginFragment">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/labelLogin"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/hintLogin">

      <requestFocus
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

    </EditText>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/labelPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/labelConfirmPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/tv_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/labelGroup"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <!-- from API 11: android:spinnerMode="dropdown" -->
    <Spinner
        android:id="@+id/sp_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <CheckBox
        android:id="@+id/cb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:checked="false"
        android:text="@string/labelRememberLogin"/>

    <CheckBox
        android:id="@+id/cb_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:checked="false"
        android:text="@string/labelRememberPassword"/>

    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

      <RadioButton
          android:id="@+id/rb_chooseGroup"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/labelChooseGroup"/>

      <RadioButton
          android:id="@+id/rb_openLast"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="@string/labelLastOpened"/>
    </RadioGroup>

    <!-- from API 14: android:background="@android:color/holo_blue_dark" -->
    <Button
        android:id="@+id/bt_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#ff0099cc"
        android:text="@string/btnProceed"
        android:textColor="@android:color/primary_text_dark"/>
  </LinearLayout>
</ScrollView>